--- a/app/src/main/res/layout/game_page.xml
+++ b/app/src/main/res/layout/game_page.xml
@@ -283,6 +283,18 @@
             android:src="@drawable/horse_game" />
 
         <ImageView
+            android:id="@+id/rider"
+            android:layout_width="400dp"
+            android:layout_height="340dp"
+            android:layout_marginStart="-180dp"
+            android:layout_marginTop="10dp"
+            android:alpha="0.6"
+            android:elevation="100dp"
+            android:contentDescription="@string/imagen_de_una_jinete"
+            android:src="@drawable/rider" />
+
+
+        <ImageView
             android:id="@+id/dirtyHead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -371,49 +383,65 @@
             android:id="@+id/dirtyGroin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/groin_dirt"
+            android:scaleY="1.2"
+            android:scaleX="1.2"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyWholeBody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/whole_body_dirt"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/main_dirt"
+            android:scaleX="1.2"
+            android:scaleY="1.2"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyTail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/tail_dirt"
+            android:scaleX="2.5"
+            android:paddingTop="15dp"
+            android:paddingStart="15dp"
+            android:scaleY="2.5"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyHooves1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/hoove_1_dirt"
+            android:scaleY="3"
+            android:scaleX="3"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyHooves2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/hoove_2_dirt"
+            android:scaleY="2.8"
+            android:scaleX="2.8"
+            android:paddingStart="2dp"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/dirtyHooves3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/dirty"
+            android:src="@drawable/hoove_3_dirt"
+            android:scaleY="3.5"
+            android:scaleX="3.5"
+            android:paddingTop="2dp"
             android:visibility="gone" />
 
 
